package model.character

class Stats(
    val strength: Int,
    val dexterity: Int,
    val intelligence: Int,
    val perception: Int,
    val charisma: Int
) {
}